--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,6 @@
   <app-navbar></app-navbar>
   <app-about></app-about>
   <app-project></app-project>
-  <app-team></app-team>
+  <app-team [persons]="personsData"></app-team>
   <app-footer></app-footer>
 </div>
