--- a/src/app/shared/components/team/team.component.html
+++ b/src/app/shared/components/team/team.component.html
@@ -5,8 +5,8 @@
   <div class="flex flex-col items-center pb-10">
     <img
       class="w-24 h-24 mb-3 rounded-full shadow-lg"
-      src={{ person.image }}
-      alt={{ person.name }}
+      src=person.image
+      alt=person.name
     />
     <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">
       {{ person.name }}
