--- a/src/app/shared/components/team/team.component.html
+++ b/src/app/shared/components/team/team.component.html
@@ -1,32 +1,43 @@
-@for (person of persons; track $index) {
-<div
-  class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
->
-  <div class="flex flex-col items-center pb-10">
-    <img
-      class="w-24 h-24 mb-3 rounded-full shadow-lg"
-      src=person.image
-      alt=person.name
-    />
-    <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">
-      {{ person.name }}
-    </h5>
-    <span class="text-sm text-gray-500 dark:text-gray-400"
-      >{{ person.rol }}</span
-    >
-    <div class="flex mt-4 md:mt-6">
-      <a
-        href="#"
-        class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >Add friend</a
-      >
-      <a
-        href="#"
-        class="py-2 px-4 ms-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
-        >Message</a
-      >
+<div class="flex flex-wrap justify-center gap-6 m-5">
+  @for (person of persons; track $index) {
+  <div
+    class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+  >
+    <div class="flex flex-col items-center pb-10">
+      <img
+        class="w-24 h-24 mb-3 rounded-full shadow-lg"
+        src="person.image"
+        alt="person.name"
+      />
+      <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">
+        {{ person.name }}
+      </h5>
+      <span class="text-sm text-gray-500 dark:text-gray-400">{{
+        person.rol
+      }}</span>
+      <div class="flex mt-4 md:mt-6">
+        <a
+          href="#"
+          class="inline-flex items-center px-2 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          >Portfolio
+          <svg
+            class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M1 5h12m0 0L9 1m4 4L9 9"
+            />
+          </svg>
+        </a>
+      </div>
     </div>
   </div>
+  }
 </div>
-
-}
